--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "netlify-cli": "^23.9.5",
     "vite": "^5.4.10",
     "vite-plugin-pwa": "^1.1.0"
   },
