chore: clean supabase config, auth screens, and env handling

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-# copy to .env.local and fill real values
-VITE_SUPABASE_URL=
-VITE_SUPABASE_ANON_KEY=
+# Example env (fill in before building)
+VITE_API_BASE=
+VITE_SUPABASE_URL=https://nsijrzvsdiqgwpqwnpzz.supabase.co
+VITE_SUPABASE_ANON_KEY=<PUT_YOUR_REAL_ANON_KEY_HERE>
