--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,20 @@
 # dependencies
 node_modules/
-pnpm-lock.yaml
-package-lock.json
 
-# prod build
+# builds
 dist/
+.vite/
 
-# env / secrets
+# env & local config (DO NOT COMMIT SECRETS)
 .env
 .env.*
 !.env.example
 
-# tools & reports
-playwright-report/
-test-results/
-.vscode/
-.DS_Store
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
 # misc
-*.log
-
-# Local Netlify folder
-.netlify
-
-# env
-.env.local
+.DS_Store
